--- a/src/components/Notifications/Notifications.css
+++ b/src/components/Notifications/Notifications.css
@@ -1,10 +1,10 @@
 .notification-actions-trigger .pip {
-  background-color: var(--bright-blue);
+  background-color: red;
   border-radius: 50%;
   color: #fff;
   font-size: 9px;
   font-weight: bold;
-  height: 1tpx; 
+  height: 1tpx;
   line-height: 15px;
   position: absolute;
   right: -5px;
