--- a/src/apps/dashboard-projects/ProjectsHome.css
+++ b/src/apps/dashboard-projects/ProjectsHome.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   max-height: calc(100vh - 100px);
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .dashboard-projects-empty {
