--- a/src/pages/[lang]/projects/[project]/index.astro
+++ b/src/pages/[lang]/projects/[project]/index.astro
@@ -33,6 +33,7 @@ if (project.error || !project.data) {
     statusText: 'Not Found',
   });
 }
+console.log(project.data);
 
 const documents = await listDocumentsInProject(supabase, projectId as string);
 
