--- a/src/themes/default/button/unstyled.css
+++ b/src/themes/default/button/unstyled.css
@@ -13,6 +13,7 @@ button.unstyled {
 
 button.unstyled svg {
   position: relative;
+  color: white;
   top: -1px;
 }
 
@@ -34,6 +35,6 @@ button.unstyled.icon-only {
 }
 
 button.unstyled.icon-only svg {
-  margin: 1px 0 0 0;  
+  margin: 1px 0 0 0;
   padding: 0;
 }
