--- a/src/components/AnnotationDesktop/FilterPanel/FilterPanel.css
+++ b/src/components/AnnotationDesktop/FilterPanel/FilterPanel.css
@@ -1,6 +1,6 @@
 .anno-drawer-panel.filter-panel {
   font-size: var(--font-tiny);
-  padding: 10px 20px;
+  padding: 0 20px;
 }
 
 .anno-drawer-panel.filter-panel section {
@@ -12,13 +12,35 @@
   margin-top: 1rem;
 }
 
+.anno-drawer-panel.filter-panel section > section {
+  padding: 10px 0 0 0;
+}
+
+.anno-drawer-panel.filter-panel section > section,
+.anno-drawer-panel.filter-panel section > section + section {
+  border-top: none;
+  margin-top: 0;
+}
+
 .anno-drawer-panel.filter-panel h2 {
   align-items: center;
   display: flex;
   font-family: Inter;
   font-size: var(--font-tiny);
   gap: 0.5rem;
-  margin: 0.25rem 0 1rem 0;
+  margin: 0.25rem 0 0.75rem 0;
+}
+
+.anno-drawer-panel.filter-panel ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.anno-drawer-panel.filter-panel .filter-toggle-buttons ul {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
 }
 
 .anno-drawer-panel.filter-panel button.toggle {
