Minor refactoring + made filters panel work in image mode

--- a/src/apps/annotation-image/ImageAnnotationDesktop.css
+++ b/src/apps/annotation-image/ImageAnnotationDesktop.css
@@ -1,6 +1,7 @@
 @import '@annotorious/react/annotorious-react.css';
 
 .ia-desktop main {
+  background-color: var(--gray-100);
   flex-grow: 1;
   position: relative;
   overflow: hidden;
