--- a/src/apps/annotation-image/LeftDrawer/LeftDrawer.css
+++ b/src/apps/annotation-image/LeftDrawer/LeftDrawer.css
@@ -1,18 +1,13 @@
-.ia-drawer.ia-left-drawer {
-  background-color: #fff;
-  box-shadow:
-    0px 0px 16px -1px rgba(0, 0, 0, 0.15),
-    0px 0px 16px -8px rgba(0, 0, 0, 0.25), 
-    0px 0px 16px -12px rgba(0, 0, 0, 0.32),
-    0px 0px 2px 0px rgba(0, 0, 0, 0.28);
+.anno-drawer.ia-left-drawer {
+  background-color: var(--gray-50);
+  box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.12), 0 0 1px rgba(0, 0, 0, 0.3);
   left: 0;
   padding-top: 0;
   scroll-padding: 40px;
   top: 0;
-  transform: translateX(-150px);
-  width: 150px;
+  width: 280px;
 }
 
-.ia-left-drawer aside {
+.anno-drawer.ia-left-drawer aside {
   height: 100%;
 }
