--- a/src/themes/default/annotation/index.css
+++ b/src/themes/default/annotation/index.css
@@ -37,3 +37,38 @@
 .anno-desktop-overlay button.active svg {
   color: #fff;
 }
+
+.anno-drawer aside .tablist {
+  border-bottom: 1px solid var(--gray-200);
+  color: var(--font-light);
+  font-size: var(--font-tiny);
+  padding: 10px 15px 5px 15px;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+}
+
+.anno-drawer aside .tablist ul {
+  display: flex;
+  gap: 1.75rem;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.anno-drawer aside .tablist ul li.active {
+  color: var(--font-dark);
+  font-weight: 500;
+}
+
+.anno-drawer aside .tablist ul li.active svg {
+  color: var(--font-dark);
+}
+
+.anno-drawer aside .tablist button {
+  all: unset;
+  align-items: center;
+  cursor: pointer;
+  display: inline-flex;
+  gap: 0.25rem;
+}
