--- a/src/components/AnnotationDesktop/AnnotationList/AnnotationList.css
+++ b/src/components/AnnotationDesktop/AnnotationList/AnnotationList.css
@@ -19,9 +19,18 @@
   transition: margin 400ms ease-in;
 }
 
+.anno-drawer-panel.annotation-list.has-selected > ul > li .annotation:not(.selected) {
+  cursor: pointer;
+  filter: grayscale(0.8) contrast(0.65) brightness(1.25);
+  opacity: 0.45;
+}
+
 .anno-drawer-panel.annotation-list > ul > li .annotation.selected {
   margin: 25px 0;
-  box-shadow: 0 0 6px 3px rgba(7, 82, 154, 0.25);
+  box-shadow: 
+    0 0 1px 0 rgba(0, 0, 0, 0.18), 
+    2px 3px 8px 0 rgba(0, 0, 0, 0.12),
+    3px 8px 20px 0 rgba(0, 0, 0, 0.08);
   transition: margin 100ms ease-out;
 }
 
