--- a/src/components/Annotation/AnnotationCard.css
+++ b/src/components/Annotation/AnnotationCard.css
@@ -32,8 +32,12 @@
   background-color: #e1d7b4;
 }
 
-.annotation:not(.note) {
-  /* border-left: 3px solid var(--card-border, transparent); */
+.annotation:not(.note)::before {
+  content: '';
+  border-left: 3px solid var(--card-border);
+  height: 100%;
+  width: 0;
+  position: absolute;
 }
 
 .annotation .annotation-header {
@@ -41,7 +45,7 @@
   display: flex;
   justify-content: space-between;
   line-height: 110%;
-  padding: 10px 15px 6px 9px;
+  padding: 10px 15px 6px 12px;
 }
 
 .annotation .annotation-header .annotation-header-left {
@@ -57,7 +61,7 @@
 .annotation .annotation-comment-wrapper {
   max-height: 30vh;
   overflow-y: auto;
-  padding: 5px 12px 5px 9px;
+  padding: 5px 12px 5px 12px;
 }
 
 .annotation .quill-rte {
