--- a/src/apps/annotation-text/TextAnnotationDesktop.css
+++ b/src/apps/annotation-text/TextAnnotationDesktop.css
@@ -80,6 +80,12 @@ html, body {
     0 0 16px -7px rgba(0, 0, 0, 0.25);
 }
 
+.ta-desktop .anno-drawer-panel.annotation-list > ul > li .annotation.selected {
+  box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.18), 
+    2px 3px 8px 0 rgba(0, 0, 0, 0.12),
+    3px 8px 20px 0 rgba(0, 0, 0, 0.08);
+}
+
 .a9s-popup {
   z-index: 999;
 }
