--- a/src/components/AnnotationDesktop/AnnotationPopup/AnnotationPopup.css
+++ b/src/components/AnnotationDesktop/AnnotationPopup/AnnotationPopup.css
@@ -1,5 +1,5 @@
 .annotation-popup {
-  animation:popupFadeIn 100ms linear;
+  animation: popupFadeIn 200ms ease-in;
   border-radius: 5px;
   box-shadow:
     1px 2px 4px rgba(0, 0, 0, 0.02),
