Minor tweaks, re-enabled 'typing' animation state

--- a/src/components/Annotation/EmptyAnnotation.css
+++ b/src/components/Annotation/EmptyAnnotation.css
@@ -5,6 +5,10 @@
   --anim-v-offset: -5px;
 }
 
+.annotation.empty.typing .annotation-header {
+  margin-bottom: 6px;
+}
+
 .annotation.empty .quill-rte .ql-editor {
   height: 80px;
 }
@@ -13,11 +17,11 @@
   padding-bottom: 10px;
 }
 
-.annotation.empty .typing {
+.annotation.empty .typing-animation {
   padding: 3px 0 4px 1px;
 }
 
-.annotation.empty .typing-animation {
+.annotation.empty .typing-animation > div {
   animation: dot-typing 1.4s infinite linear;
   background-color: var(--anim-color);
   border-radius: var(--anim-dot-size);
