--- a/src/apps/annotation-image/ImageAnnotationDesktop.css
+++ b/src/apps/annotation-image/ImageAnnotationDesktop.css
@@ -1,5 +1,9 @@
 @import '@annotorious/react/annotorious-react.css';
 
+.ia-desktop {
+  margin-top: 60px;
+}
+
 .ia-desktop main {
   background-color: var(--gray-100);
   flex-grow: 1;
