--- a/src/apps/annotation-text/TextAnnotationDesktop.css
+++ b/src/apps/annotation-text/TextAnnotationDesktop.css
@@ -1,17 +1,12 @@
-html,
-body {
+html, body {
   background-color: var(--gray-100);
-  height: calc(100vh - 60px);
+  height: 100%;
   overscroll-behavior: none;
 }
 
-.ta-desktop {
-  margin-top: 60px;
-}
 .ta-desktop .header,
 .ta-desktop .footer {
-  z-index: 20;
-  position: sticky;
+  z-index: 20;  
 }
 
 .ta-desktop main {
