--- a/src/themes/default/annotation/index.css
+++ b/src/themes/default/annotation/index.css
@@ -3,8 +3,13 @@
 .anno-desktop {
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 60px);
+  height: 100%;
   width: 100%;
+}
+
+.anno-desktop .top-bar-container header {
+  padding: 0 15px;
+  position: relative;
 }
 
 .anno-desktop-overlay {
