--- a/src/components/AnnotationDesktop/DocumentNotes/DocumentNotesList/DocumentNotesList.css
+++ b/src/components/AnnotationDesktop/DocumentNotes/DocumentNotesList/DocumentNotesList.css
@@ -69,19 +69,21 @@
 }
 
 .anno-sidepanel.document-notes-list .document-notes-list-create-new button {
-  padding: 6px 8px 6px 6px;
+  border-color: rgba(0, 0, 0, 0.22);
+  color: var(--font-light);
   margin: 0;
   min-width: auto;
+  padding: 5px 6px 5px 4px;
 }
 
 .anno-sidepanel.document-notes-list .document-notes-list-create-new button:first-child {
   border-right-width: 0;
-  border-radius: var(--button-border-radius) 0 0 var(--button-border-radius);
+  border-radius: 5px 0 0 5px;
 }
 
 .anno-sidepanel.document-notes-list .document-notes-list-create-new button:last-child {
-  border-radius: 0 var(--button-border-radius) var(--button-border-radius) 0;
-  padding: 6px 0 6px 4px;
+  border-radius: 0 5px 5px 0;
+  padding: 5px 0 5px 4px;
 }
 
 .anno-sidepanel.document-notes-list .document-notes-list-create-new button > svg {
