--- a/src/components/Annotation/ReplyField.css
+++ b/src/components/Annotation/ReplyField.css
@@ -3,6 +3,10 @@
   padding-bottom: 10px;
 }
 
+.annotation.note .reply-field {
+  border-color: #f3e096;
+}
+
 .annotation .reply-field-wrapper {
   align-items: flex-end;
   display: flex;
