--- a/src/themes/default/annotation/index.css
+++ b/src/themes/default/annotation/index.css
@@ -75,5 +75,36 @@
   align-items: center;
   cursor: pointer;
   display: inline-flex;
-  gap: 0.25rem;
+  gap: 0.5rem;
+}
+
+.anno-drawer aside .tablist .notification-bubble {
+  right: auto;
+  top: -6px;
+  left: 9px;
+}
+
+.with-notification {
+  display: inline-block;
+  position: relative;
+}
+
+.notification-bubble {
+  all: unset;
+  align-items: center;
+  background-color: var(--bright-blue);
+  border-radius: 999px;
+  border: 1px solid #fff;
+  color: #fff !important;
+  display: flex;
+  gap: 11px;
+  font-size: 9.5px;
+  height: 16px;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  right: -5px;
+  top: -3px;
+  width: 16px;
 }
