--- a/src/themes/default/index.css
+++ b/src/themes/default/index.css
@@ -11,6 +11,7 @@
 @import './popover/index.css';
 @import './radio/index.css';
 @import './select/index.css';
+@import './switch/index.css';
 @import './table/index.css';
 @import './tabs/index.css';
 @import './toast/index.css';
