--- a/src/components/DocumentCard/DocumentCardThumbnail.css
+++ b/src/components/DocumentCard/DocumentCardThumbnail.css
@@ -1,10 +1,3 @@
-.doc-card-thumbnail-spinner {
-  width: 200px;
-  height: 200px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
 
 .document-card-image-container {
   width: 200px;
@@ -13,4 +6,12 @@
 
 .document-card-image-container img {
   object-fit: cover;
+}
+
+.document-card-image-container .spinner-container {
+  width: 200px;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
